--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -4,9 +4,9 @@ select_mode=0
 
 [editor_metadata]
 
-executable_path="/usr/bin/godot"
+executable_path="C:/Users/ganic/OneDrive/Документы/Godot_v4.5.1-stable_win64.exe/Godot_v4.5.1-stable_win64.exe"
 
 [dialog_bounds]
 
 create_new_node=Rect2(830, 370, 900, 700)
-project_settings=Rect2(680, 370, 1200, 700)
+project_settings=Rect2(502, 270, 1200, 700)
