--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/")
+dock_filesystem_selected_paths=PackedStringArray("res://lona.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,32 +28,32 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://main.tscn", "res://lona.tscn")
+current_scene="res://lona.tscn"
+center_split_offset=-475
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
-position=Vector2i(2130, 69)
-size=Vector2i(1519, 934)
+position=Vector2i(1, 48)
+size=Vector2i(2557, 1390)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://scripts/lona.gd"]
+selected_script="res://scripts/lona.gd"
+open_help=["Camera2D"]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.9285711
 
 [GameView]
 
-floating_window_rect=Rect2i(2361, 149, 1164, 695)
+floating_window_rect=Rect2i(1281, 48, 1277, 1390)
 floating_window_screen=0
 
 [ShaderEditor]
