--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -4,7 +4,7 @@ select_mode=0
 
 [editor_metadata]
 
-executable_path="C:/Users/ganic/OneDrive/Документы/Godot_v4.5.1-stable_win64.exe/Godot_v4.5.1-stable_win64.exe"
+executable_path="/usr/bin/godot"
 show_all_nodes_for_node_selection=true
 
 [dialog_bounds]
