--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/lona_fr_fr/LonaMCC_head_Happy.png")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://assets/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/", "res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/", "res://assets/lona_fr_fr/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,32 +28,31 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://lona.tscn")
-current_scene="res://main.tscn"
-center_split_offset=-375
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=13
+open_scenes=PackedStringArray("res://main.tscn", "res://lona.tscn", "res://exit.tscn")
+current_scene="res://exit.tscn"
+center_split_offset=-257
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(1, 48)
+mode="maximized"
+position=Vector2i(1920, 23)
 size=Vector2i(2557, 1390)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/lona.gd"]
+open_scripts=["res://scripts/exit.gd", "res://scripts/lona.gd"]
 selected_script="res://scripts/lona.gd"
 open_help=["Camera2D"]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.9285709
+zoom_factor=0.7142856
 
 [GameView]
 
-floating_window_rect=Rect2i(1, 48, 2557, 1390)
+floating_window_rect=Rect2i(2298, 151, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
