--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-# Godot 4+ specific ignores
 .godot/
 .nomedia
 
-# Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
 export_credentials.cfg
 *.tmp
 
-# Imported translations (automatically generated from CSV files)
 *.translation
 
-# Mono-specific ignores (if using C#)
 .mono/
 data_*/
 mono_crash.*.json
 
-# OS-specific ignores
-# macOS
 .DS_Store
 .DS_Store?
 ._*
@@ -27,7 +21,6 @@ mono_crash.*.json
 ehthumbs.db
 Thumbs.db
 
-# Windows
 Thumbs.db
 Thumbs.db:encryptable
 ehthumbs.db
@@ -35,15 +28,12 @@ ehthumbs_vista.db
 Desktop.ini
 $RECYCLE.BIN/
 
-# Linux
 *~
 
-# IDE-specific (optional, if you use them)
-# VS Code
 .vscode/
-# JetBrains
+
 .idea/
 
-# Temporary backups (Godot sometimes creates them)
 *.bak
 *.old
+*.cfg
